<resources>
    <string name="app_name">ESETNews</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>

    <string-array name="tabSections">
        <item>Home</item>
        <item>Tech</item>
        <item>Science</item>
        <item>Local</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="test_if_commit_is_taken_seriously">test if commit is taken seriously</string>
    <string name="usrname">Username</string>
    <string name="enter_email">Enter email</string>
    <string name="Enter_Pwd">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_an_account_with_esetnews_to_create_custom_alerts_and_personalised_news_updates">Create an account with ESETNews to create custom alerts and personalised news updates</string>
    <string name="enter_username">Enter username</string>
    <string name="create">Create</string>

<!--    <string-array name="tabProfileTitles">-->
<!--        <item>Alerts</item>-->
<!--        <item>Comments</item>-->
<!--        <item>Markers</item>-->
<!--    </string-array>-->

    <string-array name="tabProfileTitles">
        <item>Alerts</item>
        <item>Markers</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_alerts_fragment">AlertsFragment</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_comments_fragment">CommentsFragment</string>
    <string name="comments">Your Comments</string>
    <string name="alerts">Alerts</string>
    <string name="current_alerts">Current Alerts</string>
    <string name="suggested_alerts">Suggested Alerts</string>
    <string name="artifical_intelligence">Artificial Intelligence</string>

    <string name="banner_notifications">Banner Notifications</string>
    <string name="badge_notifications">Badge Notifications</string>
    <string name="sound_notifications">Sound Notifications</string>
    <string name="title_activity_local">Map</string>
    <string name="i_find_it_funny_how_sugar_and_alcohol_is_more_essential_than_books">I find it funny how sugar and alcohol is more \'essential\' than books</string>
    <string name="commented_on">commented on</string>
    <string name="said">said</string>
    <string name="headline_here">headline here</string>
    <string name="timestamp_here">timestamp here</string>
    <string name="info_here">Info here</string>
    <string name="commentscontent">Comments</string>
    <string name="enter_your_comment_here">Enter your comment here</string>
    <string name="headline_image">Headline Image</string>
    <string name="hci">HCI</string>
    <string name="cern">CERN</string>
    <string name="climate_change">Climate Change</string>
    <string name="plastic">Plastic</string>
    <string name="vr">VR</string>
    <string name="nasa">NASA</string>
    <string name="unity">Unity</string>
    <string name="add_alert">Add Alert</string>
    <string name="enter_new_alert">Enter new Alert</string>
    <string name="add">Add</string>
    <string name="exampletime">29/10/2020 15:34</string>
    <string name="exampletext">commented on Males considered non-essential at Tesco by JustLizSimpson @ 12:09 saying \'I find it funny how sweets and alcohol are more essential than books and pens</string>
    <string name="liz">Liz</string>
    <string name="exampletime2">10/10/2020 10:00</string>
    <string name="exampletext2">commented on jaffa cakes win house cup by JustLizSimpson @ 12:02 saying \'Yeah boi\'s\'</string>
    <string name="welcome">Welcome, Log In to get your latest news</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_eset_news_register">New to ESET News, Register?</string>
</resources>